@@ -1,8 +1,0 @@
-[3832] error @0.267738> [hit #1]request to GET /amanda/v1.0/configs/test/status crashed: bad status on dlet taper DONE/PARTIAL: 10 at /amanda/h1/linux/lib/amanda/perl/Amanda/Status.pm line 823, <$fd> line 2443. in /usr/local/share/perl5/Dancer/Handler.pm l. 98
-[3856] error @154.053713> [hit #1]request to POST /amanda/v1.0/configs/test/runs/amdump crashed: Undefined subroutine &Amanda::Rest::Runs::debug called at /amanda/h1/linux/lib/amanda/perl/Amanda/Rest/Runs.pm line 94. in /usr/local/share/perl5/Dancer/Handler.pm l. 98
-[30570] error @0.006915> [hit #1]request to POST /amanda/v1.0/configs/test/runs/amdump crashed: Undefined subroutine &Amanda::Rest::Runs::status called at /amanda/h1/linux/lib/amanda/perl/Amanda/Rest/Runs.pm line 106. in /usr/local/share/perl5/Dancer/Handler.pm l. 98
-[407] error @0.009532> [hit #1]request to POST /amanda/v1.0/configs/test/runs/amflush crashed: Can't locate object method "new" via package "Amanda::Amflush" at /amanda/h1/linux/lib/amanda/perl/Amanda/Rest/Runs.pm line 146. in /usr/local/share/perl5/Dancer/Handler.pm l. 98
-[14140] error @0.006627> [hit #1]request to POST /amanda/v1.0/configs/test/runs/amvault crashed: Can't locate object method "new" via package "Amanda::vault" (perhaps you forgot to load "Amanda::vault"?) at /amanda/h1/linux/lib/amanda/perl/Amanda/Rest/Runs.pm line 129. in /usr/local/share/perl5/Dancer/Handler.pm l. 98
-[14142] error @0.006624> [hit #1]request to POST /amanda/v1.0/configs/test/runs/amvault crashed: Can't locate object method "new" via package "Amanda::vault" (perhaps you forgot to load "Amanda::vault"?) at /amanda/h1/linux/lib/amanda/perl/Amanda/Rest/Runs.pm line 129. in /usr/local/share/perl5/Dancer/Handler.pm l. 98
-[16410] error @0.006571> [hit #1]request to POST /amanda/v1.0/configs/test/runs/amvault crashed: Can't locate object method "new" via package "Amanda::Vault" at /amanda/h1/linux/lib/amanda/perl/Amanda/Rest/Runs.pm line 129. in /usr/local/share/perl5/Dancer/Handler.pm l. 98
-[18675] error @0.018411> [hit #1]request to POST /amanda/v1.0/configs/test/runs/amvault crashed: Can't locate object method "new" via package "main::Interactivity" (perhaps you forgot to load "main::Interactivity"?) at /amanda/h1/linux/lib/amanda/perl/Amanda/Vault.pm line 281. in /usr/local/share/perl5/Dancer/Handler.pm l. 98
